--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,3 @@
-:root * {
-    /* transition: all 1s; */
-}
 body {
     background: rgb(233, 245, 250);
     margin: 0;
@@ -59,26 +56,18 @@ figure img {
 
 #skills {
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 100%;
-    margin: 10px;
-    padding: 5px;
+    justify-content: space-between;
+    width: 90%;
+    margin: 20px auto;
+    height: 30px;
 }
 
 #skills figure {
-    width: 1%;
-    height: 50%;
-    margin: 2px;
-    display: flex;
-    border: none;
-    margin: 0 5px;
-    flex-direction: column;
-    justify-content: center;
+    width: 1.5%;
+    margin: 0;
 }
 
 #skills figure figcaption {
-    /* overflow: hidden; */
     font-size: 1rem;
     position: relative;
     left: -100%;
@@ -87,24 +76,46 @@ figure img {
 }
 
 #skills figure img {
-background: rgb(225, 218, 177);
+    background: rgb(225, 218, 177);
     width: 100%;
     height: 100%;
-    padding: 10px 5px 0 5px;
     box-shadow: 1px 1px 2px rgb(8, 8, 8);
 }
 
-#skills figure:hover {
+#skills figure:hover img {
     transition: all 1s;
-    transform: scale(200%);
-    height: fit-content;
+    transform: scaleX(5) scaleY(2.5);
     position: relative;
+    bottom: 150%;
+    padding: 2px;
 }
 
 #skills figure:hover figcaption {
-    font-size: 1rem;
+    transition: all 1s;
     overflow: visible;
     color: black;
-    height: 1rem;
+    position: absolute;
+    top: -60%;
+}
 
+#applications {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.app {
+    width: 40%;
+}
+
+.app img {
+    width: 100%;
+}
+
+.info {
+    background: black;
+    color: white;
+    padding: 5px;
+    display: flex;
+    justify-content: space-around;
 }
