--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,13 @@ body {
     margin: 0;
 }
 
-nav {
+/*mark*/nav {
     text-align: center;
-    font-size: 4rem;
+    font-size: 3rem;
+}
+
+nav h1 {
+    text-decoration: underline;
 }
 
 .title {
@@ -15,7 +19,6 @@ nav {
     padding-left: 20px;
     margin-right: 20px;
 }
-
 
 #aboutMe {
     display: flex;
@@ -31,6 +34,7 @@ nav {
 }
 
 #aboutMe figure {
+    position: relative;
     width: 30%;
     text-align: center;
 }
@@ -64,38 +68,48 @@ figure img {
 
 #skills figure {
     width: 1.5%;
-    margin: 0;
+    margin: 5px;
 }
 
 #skills figure figcaption {
     font-size: 1rem;
-    position: relative;
+    position: absolute;
     left: -100%;
     height: 0;
+    top: 0;
     overflow: hidden;
 }
 
 #skills figure img {
-    background: rgb(225, 218, 177);
+    background: #f5e269;
+    padding: 5px;
     width: 100%;
     height: 100%;
-    box-shadow: 1px 1px 2px rgb(8, 8, 8);
+    box-shadow: 2px 1px 0px silver, 3px 2px 3px black;
 }
 
 #skills figure:hover img {
     transition: all 1s;
-    transform: scaleX(5) scaleY(2.5);
+    transform: translateY(-80%) scale(2.5);
     position: relative;
-    bottom: 150%;
     padding: 2px;
 }
 
 #skills figure:hover figcaption {
     transition: all 1s;
     overflow: visible;
-    color: black;
+    color: white;
     position: absolute;
-    top: -60%;
+    top: -4rem;
+    text-align: center;
+    margin: 0 auto;
+    background: black;
+    padding: 0 10px;
+    transform: translateY(-19px);
+    height: 2rem;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
 }
 
 #applications {
