--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(233, 245, 250);
+    background: rgb(222 220 221);
     margin: 0;
 }
 
@@ -13,24 +13,16 @@ nav h1 {
 }
 
 .title {
-    font-size: 4rem;
-    margin-top: 100px;
-    background: linear-gradient(35deg, transparent 80%, black 80%,transparent 90%, black 91%);
+    font-size: 5rem;
+    background: linear-gradient(126deg, lavender 82%, black 90%,lavender 90%, black 101%);
     padding-left: 20px;
-    margin-right: 20px;
+    margin: 0;
 }
 
 #aboutMe {
     display: flex;
     flex-wrap: wrap;
-    /* border: 2px solid #000; */
-    margin: 20px auto;
-    /* background: linear-gradient(35deg, white 20%, transparent 80%); */
-    /* border-radius: 0 25px; */
-    /* box-shadow: 5px 5px 5px black; */
-    /* transform: rotate(5deg); */
-    margin-top: 80px;
-    /* max-width: 1000px; */
+    margin: 20px 5%;
 }
 
 #aboutMe figure {
@@ -54,8 +46,8 @@ nav h1 {
 }
 
 figure img {
-    border-radius: 50%;
-    width: 200px;
+    border-radius: 31%;
+    width: 250px;
 }
 
 #skills {
@@ -120,10 +112,24 @@ figure img {
     align-items: center;
 }
 
+#divider1 {
+    height: 200px;
+    background: linear-gradient(-4deg, lavender 50%, black 52%, black 54%, #dedcdd 55%);
+    margin: 0;
+}
+
+#bg1 {
+    background: lavender;
+    margin: 0;
+    padding: 5%;
+}
+
 #applications {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    padding: 5% 5px;
+    background: lavender;
 }
 
 .app {
